Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-131796

qgraphstheme.cpp:5:10: fatal error: utils_p.h: No such file or directory

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • 6.8.2, 6.9.0 FF
    • 6.8.1
    • Graphs: 2D
    • None
    • All
    • 893a0394b (dev), 8112b400f (6.8)

      seems there is a regression from 6.8.0, even with unity build disabled:

       FAILED: src/CMakeFiles/Graphs.dir/Unity/unity_0_cxx.cxx.o        $BUILD_PREFIX/bin/x86_64-conda-linux-gnu-c++ -DGraphs_EXPORTS -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_GRAPHS_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_EXPLICIT_QFILE_CONSTRUCTION_FROM_PATH -DQT_GUI_LIB -DQT_MOC_COMPAT -DQT_NETWORK_LIB -DQT_NO_AS_CONST=1 -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_FOREACH=1 -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_NO_QASCONST -DQT_NO_QEXCHANGE -DQT_NO_QSNPRINTF -DQT_OPENGL_LIB -DQT_QMLINTEGRATION_LIB -DQT_QMLMETA_LIB -DQT_QMLMODELS_LIB -DQT_QMLWORKERSCRIPT_LIB -DQT_QML_LIB -DQT_QUICKSHAPES_LIB -DQT_QUICK_LIB -DQT_USE_QSTRINGBUILDER -D_GLIBCXX_ASSERTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I$SRC_DIR/build/src/Graphs_autogen/include -I$SRC_DIR/build/include -I$SRC_DIR/build/include/QtGraphs -I$SRC_DIR/src -I$SRC_DIR/build/src -I$SRC_DIR/build/include/QtGraphs/6.8.1 -I$SRC_DIR/build/include/QtGraphs/6.8.1/QtGraphs -I$SRC_DIR/src/common -isystem $PREFIX/include/qt6/QtQml/6.8.1 -isystem $PREFIX/include/qt6/QtQml/6.8.1/QtQml -isystem $PREFIX/include/qt6/QtCore/6.8.1 -isystem $PREFIX/include/qt6/QtCore/6.8.1/QtCore -isystem $PREFIX/include/qt6/QtCore -isystem $PREFIX/include/qt6 -isystem $PREFIX/lib/qt6/mkspecs/linux-g++ -isystem $PREFIX/include/qt6/QtQml -isystem $PREFIX/include/qt6/QtQmlIntegration -isystem $PREFIX/include/qt6/QtNetwork -isystem $PREFIX/include/qt6/QtGui -isystem $PREFIX/include/qt6/QtQuick -isystem $PREFIX/include/qt6/QtQmlMeta -isystem $PREFIX/include/qt6/QtQmlModels -isystem $PREFIX/include/qt6/QtQmlWorkerScript -isystem $PREFIX/include/qt6/QtOpenGL -isystem $PREFIX/include/qt6/QtQuick/6.8.1 -isystem $PREFIX/include/qt6/QtQuick/6.8.1/QtQuick -isystem $PREFIX/include/qt6/QtGui/6.8.1 -isystem $PREFIX/include/qt6/QtGui/6.8.1/QtGui -isystem $PREFIX/include/qt6/QtQmlModels/6.8.1 -isystem $PREFIX/include/qt6/QtQmlModels/6.8.1/QtQmlModels -isystem $PREFIX/include/qt6/QtQmlMeta/6.8.1 -isystem $PREFIX/include/qt6/QtQmlMeta/6.8.1/QtQmlMeta -isystem $PREFIX/include/qt6/QtQmlWorkerScript/6.8.1 -isystem $PREFIX/include/qt6/QtQmlWorkerScript/6.8.1/QtQmlWorkerScript -isystem $PREFIX/include/qt6/QtQuickShapes -isystem $PREFIX/include/qt6/QtQuickShapes/6.8.1 -isystem $PREFIX/include/qt6/QtQuickShapes/6.8.1/QtQuickShapes -fvisibility-inlines-hidden -fmessage-length=0 -march=nocona -mtune=haswell -ftree-vectorize -fPIC -fstack-protector-strong -fno-plt -O2 -ffunction-sections -pipe -isystem $PREFIX/include -fdebug-prefix-map=$SRC_DIR=/usr/local/src/conda/qt6-graphs-6.8.1 -fdebug-prefix-map=$PREFIX=/usr/local/src/conda-prefix -DNDEBUG -O2 -std=gnu++17 -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -pthread -U_FORTIFY_SOURCE -Wsuggest-override -fcf-protection=full -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -MD -MT src/CMakeFiles/Graphs.dir/Unity/unity_0_cxx.cxx.o -MF src/CMakeFiles/Graphs.dir/Unity/unity_0_cxx.cxx.o.d -o src/CMakeFiles/Graphs.dir/Unity/unity_0_cxx.cxx.o -c $SRC_DIR/build/src/CMakeFiles/Graphs.dir/Unity/unity_0_cxx.cxx        In file included from $SRC_DIR/build/src/CMakeFiles/Graphs.dir/Unity/unity_0_cxx.cxx:10:        $SRC_DIR/src/common/theme/qgraphstheme.cpp:5:10: fatal error: utils_p.h: No such file or directory         5 | #include "utils_p.h"         | ^~~~~~~~~~~     
      compilation terminated. 
       
      

       

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tokorpip Tomi Korpipää
            jschueller Julien Schueller
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes