Move utils needed by common classes to common

Pick-to: 6.8
Fixes: QTBUG-131796
Change-Id: Id9fd7cb22688dc063fb331bd229f0753c1b3d70c
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>